--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -20,7 +20,9 @@
     "sequelize": "6.3.4"
   },
   "devDependencies": {
-    "eslint": "6.8.0",
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.15",
     "sequelize-cli": "6.2.0"
   },
