--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "mysql2": "2.1.0",
+    "eslint-config-trybe-backend": "1.0.3",
     "sequelize": "6.3.4"
   },
   "devDependencies": {
