--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "mysql2": "2.1.0",
     "eslint-config-trybe-backend": "1.0.3",
+    "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "mysql2": "2.1.0",
     "sequelize": "6.3.4"
   },
   "devDependencies": {
