--- a/app/backend/.eslintrc.json
+++ b/app/backend/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "root": true,
   "extends": ["trybe-backend"],
+  "parser": "babel-eslint",
   "rules": {
     "sonarjs/no-duplicate-string": ["error", 5]
   }
