--- a/app/backend/.eslintrc.json
+++ b/app/backend/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "root": true,
   "extends": ["trybe-backend"],
-  "parser": "babel-eslint",
   "rules": {
-    "sonarjs/no-duplicate-string": ["error", 5]
+    "max-lines-per-function": ["error", 30]
   }
+  // "parser": "babel-eslint"
 }
