--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
